# toffy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  conftest.py  dev-environment.yml  environment.yml  prerelease-environment.yml  pyproject.toml  release-environment.yml  requirements-test.txt  requirements.txt  rosetta_matrices.py  ruff.toml  setup.py  start_jupyter.sh  tox.ini  update_notebooks.sh
creed/: detector_sweep.py  detector_sweep_test.py  file_hash.py  file_hash_test.py  misc.py  normalize.py  normalize_test.py  qc_comp.py  qc_comp_test.py  rosetta.py  rosetta_test.py  rosetta_utils.py  rosetta_utils_test.py  rosetta_utils_test_cases.py  settings.py  tiling_utils.py  tiling_utils_test.py  tiling_utils_test_cases.py
data/: sample_panel.csv
files/: angelo_experimental_rosetta_matrix_v1.csv  angelo_updated_rosetta_matrix.csv  commercial_rosetta_matrix.csv  commercial_rosetta_matrix_round2.csv  commercial_rosetta_matrix_v1.csv  commercial_rosetta_matrix_v1_Ba.csv  commercial_rosetta_matrix_v2.csv  example_panel_file.csv
templates/: 1_set_up_toffy.ipynb  2_create_tiled_mibi_run.ipynb  2_create_tma_mibi_run.ipynb  3a_monitor_MIBI_run.ipynb  3b_extract_bin_file.ipynb  3b_extract_images_from_bin.ipynb  3b_generate_qc_metrics.ipynb  3c_generate_qc_metrics.ipynb  3d_compute_median_pulse_height.ipynb  3d_example_MPH_plots.ipynb  3e_stitch_images.ipynb  3f_FOV_checks.ipynb  3f_check_resolutions.ipynb  4_compensate_image_data.ipynb  4_generate_qc_metrics.ipynb  4a_compensate_image_data.ipynb  4a_compensate_image_data_round2.ipynb  4a_compensate_image_data_v2.ipynb  4b_normalize_image_data.ipynb  5_normalize_image_data.ipynb  5_rename_and_reorganize.ipynb  6_tma_batch_qc_metrics.ipynb  Compensate_Image_Data.ipynb  Normalize_Image_Data.ipynb  autolabel_tma_cores.ipynb  batch_effects_violin_example.ipynb  check_resolutions.ipynb  compute_pulse_heights.ipynb  example_MPH_plots.ipynb  example_qc_metric_eval.ipynb  example_tma_fov_generate.ipynb  example_watcher.ipynb  extract_bin_file.ipynb  generate_tiled_regions.ipynb  generate_tuning_curve.ipynb  per_tof_histograms.ipynb  rosetta_finetuning.ipynb  stitch_images.ipynb  streaks.ipynb  update_coregistration_params.ipynb
tests/: bin_extraction_test.py  detector_sweep_test.py  file_hash_test.py  fov_watcher_test.py  image_stitching_test.py  json_utils_test.py  mph_comp_test.py  mph_inspect_test.py  normalize_test.py  panel_utils_test.py  qc_comp_test.py  qc_metrics_plots_test.py  reorg_test.py  rosetta_test.py  streak_detection_test.py  tiling_utils_test.py  utils_test.py  watcher_callbacks_test.py
toffy/: batch_effects_violin_example.ipynb  bin_extraction.py  bin_extraction_test.py  detector_sweep.py  detector_sweep_test.py  file_hash.py  file_hash_test.py  fov_watcher.py  fov_watcher_test.py  image_stitching.py  image_stitching_test.py  image_utils.py  image_utils_test.py  json_utils.py  json_utils_test.py  mibitracker_utils.py  mph_comp.py  mph_comp_test.py  mph_inspect.py  mph_inspect_test.py  normalize.py  normalize_test.py  panel_utils.py  (+29 more)
(+56 files in other folders)
